--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -94,7 +94,7 @@
 </html>
 -->
 
-
+<!--
 <html>
 <head>
     <meta charset="UTF-8">
@@ -149,6 +149,25 @@
             <li><a href="/template/fragment">템플릿 조각</a></li>
             <li><a href="/template/layout">유연한 레이아웃</a></li>
             <li><a href="/template/layoutExtend">레이아웃 상속</a></li>
+        </ul>
+    </li>
+</ul>
+</body>
+</html>
+-->
+
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+<ul>
+    <li>상품 관리
+        <ul>
+            <li><a href="/form/items">상품 관리 - 폼(form)</a></li>
         </ul>
     </li>
 </ul>
