--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -156,7 +156,7 @@
 </html>
 -->
 
-
+<!--
 <!DOCTYPE html>
 <html>
 <head>
@@ -168,6 +168,25 @@
     <li>상품 관리
         <ul>
             <li><a href="/form/items">상품 관리 - 폼(form)</a></li>
+        </ul>
+    </li>
+</ul>
+</body>
+</html>
+-->
+
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+<ul>
+    <li>상품 관리
+        <ul>
+            <li><a href="/message/items">상품 관리 - 메시지, 국제화</a></li>
         </ul>
     </li>
 </ul>
